--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-auth": "5.0.0-beta.25",
     "next-cloudinary": "^6.16.0",
